<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Call Notifier</string>
    <string name="no_internet">No Internet connection!</string>

    <string name="pref_connection">Connection</string>
    <string name="pref_mode">Mode</string>
    <string name="pref_other">Other</string>
    <string name="pref_server_title">Server Address</string>
    <string name="pref_server_summary">The address should include the page name (i.e http://www.mysite.com/call.php)</string>
    <string name="pref_atlantis_title">Atlantis</string>
    <string name="pref_atlantis_summary">Use Atlantis as server</string>
    <string name="pref_http_title">HTTP Method</string>
    <string name="pref_http_summary">GET method is used by default</string>
    <string name="pref_call_title">Calls</string>
    <string name="pref_call_summary_on">Deactivate notifications for phone calls</string>
    <string name="pref_call_summary_off">Activate notifications for phone calls</string>
    <string name="pref_sms_title">SMS</string>
    <string name="pref_sms_summary_on">Deactivate notifications for SMS</string>
    <string name="pref_sms_summary_off">Activate notifications for SMS</string>
    <string name="pref_about_title">About Call Notifier</string>
    <string name="pref_donation_title">Donation</string>
    <string name="pref_donation_summary">If you like it, please consider donating :)</string>
    
    <string name="about_title">Call Notifier is a free app created by Nawras GEORGI.</string>
    <string name="about_url">http://www.nawrasg.fr</string>
    
</resources>