<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_connection" >
        <EditTextPreference
            android:icon="@drawable/ic_action_web_site"
            android:inputType="text"
            android:key="url"
            android:summary="@string/pref_server_summary"
            android:title="@string/pref_server_title" />
        <!-- <EditTextPreference
            android:icon="@drawable/ic_action_upload"
            android:inputType="number"
            android:key="port"
            android:summary="@string/pref_port_summary"
            android:title="@string/pref_port_title" /> -->

        <ListPreference
            android:defaultValue="GET"
            android:entries="@array/http_method"
            android:entryValues="@array/http_method"
            android:icon="@drawable/ic_action_merge"
            android:key="http"
            android:summary="@string/pref_http_summary"
            android:title="@string/pref_http_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_mode" >
        <CheckBoxPreference
            android:icon="@drawable/ic_action_call"
            android:key="call"
            android:summaryOff="@string/pref_call_summary_off"
            android:summaryOn="@string/pref_call_summary_on"
            android:title="@string/pref_call_title" />
        <CheckBoxPreference
            android:icon="@drawable/ic_action_email"
            android:key="sms"
            android:summaryOff="@string/pref_sms_summary_off"
            android:summaryOn="@string/pref_sms_summary_on"
            android:title="@string/pref_sms_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_other" >
        <Preference
            android:icon="@drawable/ic_action_about"
            android:key="about"
            android:title="@string/pref_about_title" />
    </PreferenceCategory>

</PreferenceScreen>